samples/_failures_safe/1761517764_85501e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a200e8db.c: In function ‘main’:
./samples/SAFE/__tmp_a200e8db.c:143:5: error: expected expression at end of input
  143 |     for (int i = 0; i < 3; i++)
      |     ^~~
./samples/SAFE/__tmp_a200e8db.c:143:5: error: expected declaration or statement at end of input
